level012/parser.output
Nonterminals useless in grammar

    boolexpr


Terminals unused in grammar

    IF
    ELSE
    WHILE
    DEF
    RETURN
    GE
    LE
    EQ
    NE
    AND
    OR
    ','
    '>'
    '<'


Rules useless in grammar

   17 boolexpr: expr '>' expr
   18         | expr '<' expr
   19         | expr GE expr
   20         | expr LE expr
   21         | expr EQ expr
   22         | expr NE expr
   23         | expr


Grammar

    0 $accept: program $end

    1 program: ε
    2        | program stmt

    3 stmt: IDENT '=' expr ';'
    4     | INT IDENT '[' INTEGER ']' ';'
    5     | IDENT '[' expr ']' '=' expr ';'
    6     | expr ';'
    7     | NEWLINE

    8 expr: INTEGER
    9     | IDENT '[' expr ']'
   10     | IDENT
   11     | expr '+' expr
   12     | expr '-' expr
   13     | expr '*' expr
   14     | expr '/' expr
   15     | '(' expr ')'
   16     | '-' expr


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 15
    ')' (41) 15
    '*' (42) 13
    '+' (43) 11
    ',' (44)
    '-' (45) 12 16
    '/' (47) 14
    ';' (59) 3 4 5 6
    '<' (60)
    '=' (61) 3 5
    '>' (62)
    '[' (91) 4 5 9
    ']' (93) 4 5 9
    error (256)
    INTEGER <ival> (258) 4 8
    IDENT <sval> (259) 3 4 5 9 10
    NEWLINE (260) 7
    IF (261)
    ELSE (262)
    WHILE (263)
    DEF (264)
    RETURN (265)
    GE (266)
    LE (267)
    EQ (268)
    NE (269)
    AND (270)
    OR (271)
    INT (272) 4
    UMINUS (273)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    program (33)
        on left: 1 2
        on right: 0 2
    stmt (34)
        on left: 3 4 5 6 7
        on right: 2
    expr <val> (35)
        on left: 8 9 10 11 12 13 14 15 16
        on right: 3 5 6 9 11 12 13 14 15 16


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program • $end
    2 program: program • stmt

    $end     shift, and go to state 2
    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 4
    NEWLINE  shift, and go to state 5
    INT      shift, and go to state 6
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    stmt  go to state 9
    expr  go to state 10


State 2

    0 $accept: program $end •

    $default  accept


State 3

    8 expr: INTEGER •

    $default  reduce using rule 8 (expr)


State 4

    3 stmt: IDENT • '=' expr ';'
    5     | IDENT • '[' expr ']' '=' expr ';'
    9 expr: IDENT • '[' expr ']'
   10     | IDENT •

    '='  shift, and go to state 11
    '['  shift, and go to state 12

    $default  reduce using rule 10 (expr)


State 5

    7 stmt: NEWLINE •

    $default  reduce using rule 7 (stmt)


State 6

    4 stmt: INT • IDENT '[' INTEGER ']' ';'

    IDENT  shift, and go to state 13


State 7

   16 expr: '-' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 15


State 8

   15 expr: '(' • expr ')'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 16


State 9

    2 program: program stmt •

    $default  reduce using rule 2 (program)


State 10

    6 stmt: expr • ';'
   11 expr: expr • '+' expr
   12     | expr • '-' expr
   13     | expr • '*' expr
   14     | expr • '/' expr

    '+'  shift, and go to state 17
    '-'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    ';'  shift, and go to state 21


State 11

    3 stmt: IDENT '=' • expr ';'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 22


State 12

    5 stmt: IDENT '[' • expr ']' '=' expr ';'
    9 expr: IDENT '[' • expr ']'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 23


State 13

    4 stmt: INT IDENT • '[' INTEGER ']' ';'

    '['  shift, and go to state 24


State 14

    9 expr: IDENT • '[' expr ']'
   10     | IDENT •

    '['  shift, and go to state 25

    $default  reduce using rule 10 (expr)


State 15

   11 expr: expr • '+' expr
   12     | expr • '-' expr
   13     | expr • '*' expr
   14     | expr • '/' expr
   16     | '-' expr •

    $default  reduce using rule 16 (expr)


State 16

   11 expr: expr • '+' expr
   12     | expr • '-' expr
   13     | expr • '*' expr
   14     | expr • '/' expr
   15     | '(' expr • ')'

    '+'  shift, and go to state 17
    '-'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    ')'  shift, and go to state 26


State 17

   11 expr: expr '+' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 27


State 18

   12 expr: expr '-' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 28


State 19

   13 expr: expr '*' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 29


State 20

   14 expr: expr '/' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 30


State 21

    6 stmt: expr ';' •

    $default  reduce using rule 6 (stmt)


State 22

    3 stmt: IDENT '=' expr • ';'
   11 expr: expr • '+' expr
   12     | expr • '-' expr
   13     | expr • '*' expr
   14     | expr • '/' expr

    '+'  shift, and go to state 17
    '-'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    ';'  shift, and go to state 31


State 23

    5 stmt: IDENT '[' expr • ']' '=' expr ';'
    9 expr: IDENT '[' expr • ']'
   11     | expr • '+' expr
   12     | expr • '-' expr
   13     | expr • '*' expr
   14     | expr • '/' expr

    '+'  shift, and go to state 17
    '-'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    ']'  shift, and go to state 32


State 24

    4 stmt: INT IDENT '[' • INTEGER ']' ';'

    INTEGER  shift, and go to state 33


State 25

    9 expr: IDENT '[' • expr ']'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 34


State 26

   15 expr: '(' expr ')' •

    $default  reduce using rule 15 (expr)


State 27

   11 expr: expr • '+' expr
   11     | expr '+' expr •
   12     | expr • '-' expr
   13     | expr • '*' expr
   14     | expr • '/' expr

    '*'  shift, and go to state 19
    '/'  shift, and go to state 20

    $default  reduce using rule 11 (expr)


State 28

   11 expr: expr • '+' expr
   12     | expr • '-' expr
   12     | expr '-' expr •
   13     | expr • '*' expr
   14     | expr • '/' expr

    '*'  shift, and go to state 19
    '/'  shift, and go to state 20

    $default  reduce using rule 12 (expr)


State 29

   11 expr: expr • '+' expr
   12     | expr • '-' expr
   13     | expr • '*' expr
   13     | expr '*' expr •
   14     | expr • '/' expr

    $default  reduce using rule 13 (expr)


State 30

   11 expr: expr • '+' expr
   12     | expr • '-' expr
   13     | expr • '*' expr
   14     | expr • '/' expr
   14     | expr '/' expr •

    $default  reduce using rule 14 (expr)


State 31

    3 stmt: IDENT '=' expr ';' •

    $default  reduce using rule 3 (stmt)


State 32

    5 stmt: IDENT '[' expr ']' • '=' expr ';'
    9 expr: IDENT '[' expr ']' •

    '='  shift, and go to state 35

    $default  reduce using rule 9 (expr)


State 33

    4 stmt: INT IDENT '[' INTEGER • ']' ';'

    ']'  shift, and go to state 36


State 34

    9 expr: IDENT '[' expr • ']'
   11     | expr • '+' expr
   12     | expr • '-' expr
   13     | expr • '*' expr
   14     | expr • '/' expr

    '+'  shift, and go to state 17
    '-'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    ']'  shift, and go to state 37


State 35

    5 stmt: IDENT '[' expr ']' '=' • expr ';'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 14
    '-'      shift, and go to state 7
    '('      shift, and go to state 8

    expr  go to state 38


State 36

    4 stmt: INT IDENT '[' INTEGER ']' • ';'

    ';'  shift, and go to state 39


State 37

    9 expr: IDENT '[' expr ']' •

    $default  reduce using rule 9 (expr)


State 38

    5 stmt: IDENT '[' expr ']' '=' expr • ';'
   11 expr: expr • '+' expr
   12     | expr • '-' expr
   13     | expr • '*' expr
   14     | expr • '/' expr

    '+'  shift, and go to state 17
    '-'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    ';'  shift, and go to state 40


State 39

    4 stmt: INT IDENT '[' INTEGER ']' ';' •

    $default  reduce using rule 4 (stmt)


State 40

    5 stmt: IDENT '[' expr ']' '=' expr ';' •

    $default  reduce using rule 5 (stmt)
